--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "xxxxxxxooo",
+    "name": "XXXXXXXOOO-v2",
     "version": "2.0.0",
     "description": "QWxzbyBLbm93biBhcyBHdWlsaGVybWUgUGFuZ25vdHRh",
     "author": {
