--- a/package.json
+++ b/package.json
@@ -23,23 +23,23 @@
         "stylelint-fix": "stylelint ./assets --fix"
     },
     "dependencies": {
-        "@nuxtjs/axios": "^5.13.1",
-        "nuxt": "^2.15.3"
+        "@nuxtjs/axios": "5.13.1",
+        "nuxt": "2.15.4"
     },
     "devDependencies": {
-        "autoprefixer": "^10.2.5",
-        "babel-eslint": "^10.1.0",
-        "eslint": "^7.23.0",
-        "eslint-config-prettier": "^8.1.0",
-        "eslint-loader": "^4.0.2",
-        "eslint-plugin-prettier": "^3.3.1",
-        "eslint-plugin-vue": "^7.8.0",
-        "node-sass": "^5.0.0",
-        "normalize.css": "^8.0.1",
-        "sass-loader": "^10.1.1",
-        "stylelint": "^13.12.0",
-        "stylelint-config-standard": "^21.0.0",
-        "stylelint-order": "^4.1.0",
-        "stylelint-webpack-plugin": "^2.1.1"
+        "autoprefixer": "10.2.5",
+        "babel-eslint": "10.1.0",
+        "eslint": "7.25.0",
+        "eslint-config-prettier": "8.3.0",
+        "eslint-loader": "4.0.2",
+        "eslint-plugin-prettier": "3.4.0",
+        "eslint-plugin-vue": "7.9.0",
+        "node-sass": "5.0.0",
+        "normalize.css": "8.0.1",
+        "sass-loader": "10.1.1",
+        "stylelint": "13.13.0",
+        "stylelint-config-standard": "22.0.0",
+        "stylelint-order": "4.1.0",
+        "stylelint-webpack-plugin": "2.1.1"
     }
 }
